# BCIT_demo_layered_application_patterns

./: CMakeLists.txt  README.md  api.c  api.h  api_message.c  api_message.h  api_message_layer.c  api_message_layer.h  buffer_layer.c  buffer_layer.h  cipher_layer.c  cipher_layer.h  common.c  common.h  dlinked_list.c  dlinked_list.h  event_loop.c  event_loop.h  factory.c  factory.h  fd_wraper.c  fd_wraper.h  layer_definitions.c  layer_definitions.h  lecture_slides.pptx  main.c
